kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        project: yotla
    spec:
      containers:
      - name: frontend
        image: registry.hub.docker.com/yonatanbesser/yotla-frontend:latest
        ports:
          - name: http
            containerPort: 8000
