kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: frontend-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
  rules:
  - host: ingress.local
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name:  frontend-service
            port: 
              number: 80
